src/SupportApp/main/default/objects/System_Issue__c/System_Issue__c.object-meta.xml
<CustomObject>
    <label>System Issue</label>
    <nameField>
        <displayFormat>ISSUE-{0000}</displayFormat>
        <label>System Issue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>System Issues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>