src/SupportApp/main/default/objects/System_Issue__c/fields/CreatedAtMonth__c.field-meta.xml
<CustomField>
    <fullName>CreatedAtMonth__c</fullName>
    <formula>MONTH(DATEVALUE( CreatedDate ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created At Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>