src/SupportApp/main/default/objects/System_Issue__c/fields/CreatedAtYear__c.field-meta.xml
<CustomField>
    <fullName>CreatedAtYear__c</fullName>
    <formula>TEXT(YEAR(DATEVALUE( CreatedDate )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created At Year</label>
    <type>Text</type>
</CustomField>