src/SupportApp/main/default/objects/System_Issue__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>The Date the Issue is due</description>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>