src/SupportApp/main/default/objects/System_Issue__c/fields/Jira_Project__c.field-meta.xml
<CustomField>
    <fullName>Jira_Project__c</fullName>
    <label>Jira Project</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce Issues</fullName>
                <default>true</default>
                <label>Salesforce Issues</label>
            </value>
            <value>
                <fullName>FSL</fullName>
                <isActive>false</isActive>
                <label>FSL</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>