src/SupportApp/main/default/objects/System_Issue__c/fields/Parent_System_Issue__c.field-meta.xml
<CustomField>
    <fullName>Parent_System_Issue__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Parent System Issue, usually and Epic in JIRA</description>
    <label>Parent System Issue</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>notEqual</operation>
            <value>Epic</value>
        </filterItems>
        <filterItems>
            <field>$Source.Type__c</field>
            <operation>notEqual</operation>
            <value>Epic</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>System_Issue__c</referenceTo>
    <relationshipLabel>User Stories</relationshipLabel>
    <relationshipName>System_Issues</relationshipName>
    <type>Lookup</type>
</CustomField>