src/SupportApp/main/default/objects/System_Issue__c/fields/Percent_Done__c.field-meta.xml
<CustomField>
    <fullName>Percent_Done__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Percentage of the Child Issues which are done</description>
    <label>Percent - Done</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>