src/SupportApp/main/default/objects/System_Issue__c/fields/Percent_In_Progress__c.field-meta.xml
<CustomField>
    <fullName>Percent_In_Progress__c</fullName>
    <description>The percentage of child Issues which are in Progress</description>
    <label>Percent - In Progress</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>