src/SupportApp/main/default/objects/System_Issue__c/fields/Percent_To_Do__c.field-meta.xml
<CustomField>
    <fullName>Percent_To_Do__c</fullName>
    <description>The Percentage of child Issues that are left To Do</description>
    <label>Precent - To Do</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>