src/SupportApp/main/default/objects/System_Issue__c/fields/Post_Deploy_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Post_Deploy_Instructions__c</fullName>
    <description>Things that need to be complete in Production after the issue has been deployed</description>
    <label>Post Deploy Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>