src/SupportApp/main/default/objects/System_Issue__c/fields/Requires_Post_Deploy_Steps__c.field-meta.xml
<CustomField>
    <fullName>Requires_Post_Deploy_Steps__c</fullName>
    <description>This issue has steps that are to be performed after the issue has been deployed</description>
    <label>Requires Post Deploy Steps</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>