src/SupportApp/main/default/objects/System_Issue__c/fields/Sprint_Name__c.field-meta.xml
<CustomField>
    <fullName>Sprint_Name__c</fullName>
    <description>Name of the Sprint the Issue is part of</description>
    <label>Sprint Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>