src/SupportApp/main/default/objects/System_Issue__c/fields/Status_Category__c.field-meta.xml
<CustomField>
    <fullName>Status_Category__c</fullName>
    <label>Status Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>To Do</fullName>
                <default>true</default>
                <label>To Do</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Done</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>