src/SupportApp/main/default/objects/System_Issue__c/fields/Story_Count__c.field-meta.xml
<CustomField>
    <fullName>Story_Count__c</fullName>
    <label>Story Count</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>