src/SupportApp/main/default/objects/System_Issue__c/recordTypes/Epic.recordType-meta.xml
<RecordType>
    <fullName>Epic</fullName>
    <active>true</active>
    <description>A new Project or Large feature</description>
    <label>Epic</label>
</RecordType>