src/SupportApp/main/default/objects/System_Issue__c/recordTypes/Standard.recordType-meta.xml
<RecordType>
    <fullName>Standard</fullName>
    <active>true</active>
    <description>Standard Issue</description>
    <label>Standard</label>
</RecordType>