src/SupportApp/main/default/objects/System_Issue__c/listViews/All_Open_Issues.listView-meta.xml
<ListView>
    <fullName>All_Open_Issues</fullName>
    <columns>Type__c</columns>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>Department__c</columns>
    <columns>Reported_By__c</columns>
    <columns>Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Deployed,Done,Denied</value>
    </filters>
    <label>All Open Issues</label>
</ListView>