src/SupportApp/main/default/objects/System_Issue__c/listViews/All_Reported_Bugs.listView-meta.xml
<ListView>
    <fullName>All_Reported_Bugs</fullName>
    <columns>NAME</columns>
    <columns>Reported_By__c</columns>
    <columns>Department__c</columns>
    <columns>Subject__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Bug</value>
    </filters>
    <label>All Reported Bugs</label>
</ListView>