src/SupportApp/main/default/objects/System_Issue__c/listViews/Epics.listView-meta.xml
<ListView>
    <fullName>Epics</fullName>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>Department__c</columns>
    <columns>Jira_Project__c</columns>
    <columns>Jira_Issue__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New,Accepted,In Progress</value>
    </filters>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Epic</value>
    </filters>
    <label>Open Epics</label>
</ListView>