src/SupportApp/main/default/objects/System_Issue__c/listViews/New_Issues.listView-meta.xml
<ListView>
    <fullName>New_Issues</fullName>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>Department__c</columns>
    <columns>Jira_Project__c</columns>
    <columns>Jira_Issue__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Bug</value>
    </filters>
    <label>New Bugs</label>
</ListView>