src/SupportApp/main/default/objects/System_Issue__c/listViews/Unassigned_Bugs.listView-meta.xml
<ListView>
    <fullName>Unassigned_Bugs</fullName>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>Department__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Jira_Project__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Bug</value>
    </filters>
    <filters>
        <field>OWNER.ALIAS</field>
        <operation>equals</operation>
        <value>Development</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <label>Unassigned Bugs</label>
</ListView>